_sass/training.sass
.training
  background-color: #000101
  overflow-x: hidden
  .table-container
    display: flex
    flex-flow: column
    width: 100%
    @media only screen and (max-width: 1112px)
      // scrollbar-width: thin
      // overflow-x: scroll
    .table-item
      display: flex
      flex-flow: column
      width: 100%
      &:nth-child(odd)
        background-color: #e32dfd
      &:nth-child(even)
        background-color: #0074a9
      .item-col
        align-items: center
        display: flex
        flex-flow: column
        flex-grow: 1
        justify-content: center
        width: 100%
      .item-hours
        color: #ffffff
        font-weight: 500
        font-family: 'Montserrat', sans-serif
        font-size: 1.2em
        padding: 1em 0
      .item-training
        align-items: center
        background-color: #fff
        border-bottom: dashed #f3f7f8 .1em
        color: #161616
        padding: 1em 3em
        .item-title
          color: #0474ab
          cursor: pointer
          font-family: 'Montserrat', sans-serif !important
          font-size: 1.2em
          font-weight: 500
          line-height: 1.45em !important
          &:hover
            color: #0474ab
          @media only screen and (max-width: 1112px)
            font-size: 1.2em
        .item-trainer
          color: #e32dfd
          font-style: italic
          font-weight: 500
          font-size: 1.1em
          text-align: center

.training-content
  align-items: center
  background-color: #04100c
  display: flex
  flex-flow: column
  justify-content: cener
  padding: 5em 3em
  width: 100%
  @media only screen and (max-width: 1112px)
    padding: 5em 1em
  .training-card
    background-color: #04100c
    width: 80%
    padding: 2em
    @media only screen and (max-width: 1112px)
      padding: 1em
      width: 100%
    .training-head
      background-color: #04100c
      display: flex
      flex-flow: column
      .training-col
        align-items: flex-start
        display: flex
        flex-flow: column
        padding: 1em
        .training-name
          color: #e32dfd
          display: flex
          font-size: 1.6em
          flex-wrap: wrap
          line-height: 1.45em !important
          margin: 1em 1em .8em 0

        .training-info
          display: flex
          flex-flow: column
          margin-bottom: .5em
          a
            color: #eaebea
            text-decoration: underline
          strong
            color: #e32dfd
            font-family: 'Montserrat', sans-serif !important
            font-size: 1.2em
            font-weight: 600
            line-height: 1.45em !important
          p
            color: #eaebea
            font-size: .955em
            font-family: 'Montserrat', sans-serif
          .content
            h1
              font-size: 2em
              font-weight: 600
              letter-spacing: .1em
              text-transform: uppercase
              width: 100%
            h2
              font-size: 1.8em
              font-weight: 600
              letter-spacing: .1em
              text-transform: uppercase
              width: 100%
            h3
              font-size: 1.6em
              font-weight: 600
              letter-spacing: .1em
              text-transform: uppercase
              width: 100%
            h4
              font-size: 1.4em
              font-weight: 600
              letter-spacing: .1em
              text-transform: uppercase
              width: 100%
            h5
              font-size: 1.2em
              font-weight: 600
              letter-spacing: .1em
              text-transform: uppercase
              width: 100%
            h6
              font-size: 1em
              font-weight: 600
              letter-spacing: .1em
              text-transform: uppercase
              width: 100%
            p
              margin-bottom: .5em
              width: 100%
              strong
                font-family: "Karla", Arial, sans-serif
                font-weight: bold !important
              a
                color: #e32dfd
              img
                height: auto
                width: auto
                max-width: 100%

            blockquote
              border-left: solid .28em #eaebea
              padding-left: .5em
              p
                font-style: italic
            ol, ul
              padding: 1em
              li
                font-family: "Karla", Arial, sans-serif
                font-size: 16px
                font-weight: normal
                line-height: 1.5em
                letter-spacing: 0.03rem
                color: #eaebea
            code
              background-color: #04100c
              border-radius: 3px
              font-size: 85%
              line-height: 1.45
              margin-bottom: .3em
              overflow: auto
              padding: 16px

